--- a/ventas.html
+++ b/ventas.html
@@ -29,7 +29,7 @@
             <div class="videojuego-item">
                 <img src="images/videojuego1.png" alt="Videojuego 1" class="videojuego-image">
                 <div class="videojuego-details">
-                    <h2 class="videojuego-title">Epic Fantasy</h2>
+                    <h2 class="videojuego-title">The University of the Damned</h2>
                     <p class="videojuego-description">
                         Descripción:
                         <ul style="text-align: justify;">
