--- a/nosotros.html
+++ b/nosotros.html
@@ -19,10 +19,7 @@
         <a href="index.html" class="nav-item">Inicio</a>
         <a href="ventas.html" class="nav-item">Tienda</a>
         <a href="nosotros.html" class="nav-item">Nosotros</a>
-        <div id="cart-button" class="nav-item">
-            <img src="images/cart-count.png" alt="Carrito de Compras">
-            <span class="cart-count">0</span>
-        </div>
+        
     </nav>
     <h1 class="titulo-seccion">Conoce más sobre la Empresa</h1>
     <div class="container_n">
@@ -83,6 +80,7 @@
         </div>
         </div>
     </div>
+    <script src="js/pago.js"></script>
 </body>
 
 </html>
