--- a/pago.html
+++ b/pago.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagar</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> <!-- Enlace al nuevo archivo CSS -->
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
             <img src="images/logo.png" alt="Logo de CSRTechStudio">
-        </div>        
+        </div>
         <a href="index.html" class="nav-item">Inicio</a>
         <a href="ventas.html" class="nav-item">Tienda</a>
         <a href="nosotros.html" class="nav-item">Nosotros</a>
