--- a/pago.html
+++ b/pago.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container_p">
         <h1>Carrito de Compras</h1>
         <div id="carrito-lista"></div>
         <div id="total-container">
