--- a/ventas.html
+++ b/ventas.html
@@ -36,15 +36,15 @@
                         Descripción:
                         <ul style="text-align: justify;">
                             <li><strong>Género:</strong>Aventura de misterio y acción sobrenatural. </li>
-                            <li><strong>Mundo:</strong>Explora una universidad enigmática donde cada pasillo guarda un secreto oscuro y cada puerta puede llevar a lo desconocido.</li>
+                            <li><strong>Mundo:</strong>Explora una universidad enigmática donde cada pasillo guarda un secreto oscuro</li>
                             <li><strong>Personajes:</strong>Asume el papel de dos intrépidos estudiantes dispuestos a desafiar lo imposible para salvar a su amiga y destapar la verdad.</li>
                         </ul>  
                     </p>
-                    <p style="text-align: justify;"><strong>Prepárate para desafiar tus miedos, enfrentarte a monstruos aterradores y descubrir una conspiración que cambiará para siempre la percepción de la realidad.</strong></p>
+                    <p style="text-align: justify;"><strong>Prepárate para desafiar tus miedos y descubrir la conspiracion que oculta la escuela.</strong></p>
                     <p class="videojuego-price">$950</p>
                     <div class="botones-container">
-                        <button class="comprar-button" onclick="comprarAhora('The University of the Damned', 950)">Comprar</button>
-                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('The University of the Damned', 950)">Agregar al carrito</button>
+                        <button class="comprar-button" onclick="comprarAhora('The University of the Damned', 950,'images/videojuego1.png')">Comprar</button>
+                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('The University of the Damned', 950, 'images/videojuego1.png')">Agregar al carrito</button>
                     </div>
                 </div>
             </div>
@@ -64,8 +64,8 @@
                     <p style="text-align: justify;"><strong>Prepárate para una experiencia emocionante llena de combate y magia.</strong></p>
                     <p class="videojuego-price">$1,150</p>
                     <div class="botones-container">
-                        <button class="comprar-button" onclick="comprarAhora('Reinos de la Eternidad', 1150)">Comprar</button>
-                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('Reinos de la Eternidad', 1150)">Agregar al carrito</button>
+                        <button class="comprar-button" onclick="comprarAhora('Reinos de la Eternidad', 1150, 'images/videojuego2.png')">Comprar</button>
+                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('Reinos de la Eternidad', 1150, 'images/videojuego2.png')">Agregar al carrito</button>
                     </div>
                 </div>
             </div>
@@ -85,8 +85,8 @@
                     <p style="text-align: justify;"><strong>Explora un mundo misterioso y desentraña los secretos de una civilización perdida.</strong></p>
                     <p class="videojuego-price">$1,150</p>
                     <div class="botones-container">
-                        <button class="comprar-button" onclick="comprarAhora('Tierras Perdidas', 1150)">Comprar</button>
-                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('Tierras Perdidas', 1150)">Agregar al carrito</button>
+                        <button class="comprar-button" onclick="comprarAhora('Tierras Perdidas', 1150, 'images/videojuego3.png')">Comprar</button>
+                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('Tierras Perdidas', 1150, 'images/videojuego3.png')">Agregar al carrito</button>
                     </div>
                 </div>
             </div>
@@ -106,11 +106,11 @@
                     <p style="text-align: justify;"><strong>Embárcate en un viaje épico a través del cosmos con una tripulación intrépida.</strong></p>
                     <p class="videojuego-price">$1,750</p>
                     <div class="botones-container">
-                        <button class="comprar-button" onclick="comprarAhora('Space Odyssey', 1750)">Comprar</button>
-                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('Space Odyssey', 1750)">Agregar al carrito</button>
+                        <button class="comprar-button" onclick="comprarAhora('Space Odyssey', 1750, 'images/videojuego4.png')">Comprar</button>
+                        <button class="agregar-carrito-button" onclick="agregarAlCarrito('Space Odyssey', 1750, 'images/videojuego4.png')">Agregar al carrito</button>
                     </div>
                 </div>
-            </div>
+            </div>,
         </div>
         <div id="carrito"></div>
     </div>
