--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Video Game Store PWA">
     <title>Video Game Store</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="images/icons/favicon.ico">
-    <script src="js/register-sw.js"></script>
-    <script src="js/requestNotificationPermission.js"></script>
+    <link rel="manifest" href="/pwa-gamepage/manifest.json">
+    <link rel="stylesheet" href="/pwa-gamepage/css/style.css">
+    <link rel="icon" type="image/png" href="/pwa-gamepage/images/icons/favicon.ico">
+    <script src="/pwa-gamepage/js/requestNotificationPermission.js"></script>
 </head>
 <body>
     <nav class="navbar">
         <div class="logo">
-            <img src="images/logo.png" alt="CSRTechStudio Logo">
+            <img src="/pwa-gamepage/images/logo.png" alt="CSRTechStudio Logo">
         </div>
         <a href="index.html" class="nav-item">Home</a>
         <a href="ventas.html" id="ventas-link" class="nav-item">Store</a>
@@ -50,9 +49,7 @@
     <footer>
         <p>&copy; 2024 CSRTechStudio. All rights reserved.</p>
     </footer>
-    <script src="js/register-sw.js"></script>
-    <script src="serviceWorker.js"></script>
-    <script src="js/notificationsHandler.js"></script>
-    
+    <script src="/pwa-gamepage/js/register-sw.js"></script>
+    <script src="/pwa-gamepage/js/notificationsHandler.js"></script>
 </body>
 </html>
