--- a/ventas.html
+++ b/ventas.html
@@ -1,75 +1,119 @@
-// Get the cart from localStorage
-let cart = JSON.parse(localStorage.getItem('cart')) || [];
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Video Game Store PWA">
+    <title>Video Game Store</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="images/logo.png" alt="CSRTechStudio Logo">
+        </div>
+        <a href="index.html" class="nav-item">Home</a>
+        <a href="ventas.html" class="nav-item">Store</a>
+        <a href="nosotros.html" class="nav-item">About Us</a>
+        <div id="cart-button" class="nav-item" onclick="goToCart()">
+            <img src="images/cart-count.png" alt="Shopping Cart">
+            <span class="cart-count">0</span>
+        </div>
+    </nav>
 
-// Display cart items
-function displayCart() {
-    const cartList = document.getElementById('cart-list');
-    cartList.innerHTML = '';
+    <div class="container">
+        <h1 class="titulo-seccion">Welcome to the Video Game Store</h1>
+        <div class="videojuego-list">
+            <!-- Video Game 1 -->
+            <div class="videojuego-item">
+                <img src="images/videojuego1.png" alt="Video Game 1" class="videojuego-image">
+                <div class="videojuego-details">
+                    <h2 class="videojuego-title">The University of the Damned</h2>
+                    <p class="videojuego-description">
+                        Description:
+                        <ul style="text-align: justify;">
+                            <li><strong>Genre:</strong> Mystery adventure and supernatural action.</li>
+                            <li><strong>World:</strong> Explore an enigmatic university where every hallway holds a dark secret.</li>
+                            <li><strong>Characters:</strong> Take on the role of two intrepid students willing to challenge the impossible to save their friend and uncover the truth.</li>
+                        </ul>
+                    </p>
+                    <p style="text-align: justify;"><strong>Get ready to challenge your fears and uncover the conspiracy hiding in the school.</strong></p>
+                    <p class="videojuego-price">$950</p>
+                    <div class="botones-container">
+                        <button class="comprar-button" onclick="buyNow('The University of the Damned', 950, 'images/videojuego1.png')">Buy</button>
+                        <button class="agregar-carrito-button" onclick="addToCart('The University of the Damned', 950, 'images/videojuego1.png')">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Video Game 2 -->
+            <div class="videojuego-item">
+                <img src="images/videojuego2.png" alt="Video Game 2" class="videojuego-image">
+                <div class="videojuego-details">
+                    <h2 class="videojuego-title">Realms of Eternity</h2>
+                    <p class="videojuego-description">
+                        Description:
+                        <ul style="text-align: justify;">
+                            <li><strong>Genre:</strong> Action RPG with magic and adventure on an epic canvas.</li>
+                            <li><strong>World:</strong> Discover a vast kingdom full of enigmas and legendary creatures.</li>
+                            <li><strong>Characters:</strong> Become a legendary hero, forge alliances, and challenge powerful enemies.</li>
+                        </ul>
+                    </p>
+                    <p style="text-align: justify;"><strong>Get ready for an exciting experience full of combat and magic.</strong></p>
+                    <p class="videojuego-price">$1,150</p>
+                    <div class="botones-container">
+                        <button class="comprar-button" onclick="buyNow('Realms of Eternity', 1150, 'images/videojuego2.png')">Buy</button>
+                        <button class="agregar-carrito-button" onclick="addToCart('Realms of Eternity', 1150, 'images/videojuego2.png')">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Video Game 3 -->
+            <div class="videojuego-item">
+                <img src="images/videojuego3.png" alt="Video Game 3" class="videojuego-image">
+                <div class="videojuego-details">
+                    <h2 class="videojuego-title">Lost Lands</h2>
+                    <p class="videojuego-description">
+                        Description:
+                        <ul style="text-align: justify;">
+                            <li><strong>Genre:</strong> Action RPG with exploration, survival, and mystery.</li>
+                            <li><strong>World:</strong> A vast continent with jungles, deserts, and mountains to explore.</li>
+                            <li><strong>Characters:</strong> Form a team of intrepid explorers with unique skills.</li>
+                        </ul>
+                    </p>
+                    <p style="text-align: justify;"><strong>Explore a mysterious world and unravel the secrets of a lost civilization.</strong></p>
+                    <p class="videojuego-price">$1,150</p>
+                    <div class="botones-container">
+                        <button class="comprar-button" onclick="buyNow('Lost Lands', 1150, 'images/videojuego3.png')">Buy</button>
+                        <button class="agregar-carrito-button" onclick="addToCart('Lost Lands', 1150, 'images/videojuego3.png')">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Video Game 4 -->
+            <div class="videojuego-item">
+                <img src="images/videojuego4.png" alt="Video Game 4" class="videojuego-image">
+                <div class="videojuego-details">
+                    <h2 class="videojuego-title">Space Odyssey</h2>
+                    <p class="videojuego-description">
+                        Description:
+                        <ul style="text-align: justify;">
+                            <li><strong>Genre:</strong> Action RPG with space exploration and strategic combat.</li>
+                            <li><strong>World:</strong> A vast universe with unknown planets and secrets to uncover.</li>
+                            <li><strong>Characters:</strong> Choose from various character classes and customize your hero.</li>
+                        </ul>
+                    </p>
+                    <p style="text-align: justify;"><strong>Embark on an epic journey through the cosmos with an intrepid crew.</strong></p>
+                    <p class="videojuego-price">$1,750</p>
+                    <div class="botones-container">
+                        <button class="comprar-button" onclick="buyNow('Space Odyssey', 1750, 'images/videojuego4.png')">Buy</button>
+                        <button class="agregar-carrito-button" onclick="addToCart('Space Odyssey', 1750, 'images/videojuego4.png')">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="carrito"></div>
+    </div>
 
-    cart.forEach((game, index) => {
-        const gameElement = document.createElement('div');
-        gameElement.classList.add('game-item');
-        gameElement.innerHTML = `
-            <img src="${game.image}" alt="${game.name}" class="game-image">
-            <p class="game-title">${game.name} - $${game.price}</p>
-            <button onclick="removeFromCart(${index})">Remove</button>
-        `;
-        cartList.appendChild(gameElement);
-    });
-
-    updateTotal();
-}
-
-// Remove a product from the cart
-function removeFromCart(index) {
-    cart.splice(index, 1);
-    displayCart();
-    localStorage.setItem('cart', JSON.stringify(cart));
-    updateCartUI();
-}
-
-// Update the total price in the cart
-function updateTotal() {
-    const total = cart.reduce((sum, game) => sum + game.price, 0);
-    const totalElement = document.getElementById('total');
-    totalElement.textContent = total.toFixed(2);
-}
-
-// Verify the payment form
-function verifyPayment(event) {
-    event.preventDefault();
-
-    const cardName = document.getElementById('card-name').value.trim();
-    const cardNumber = document.getElementById('card-number').value.trim();
-    const expiryDate = document.getElementById('expiry-date').value.trim();
-    const cvv = document.getElementById('cvv').value.trim();
-
-    // Check if all fields are filled
-    if (!cardName || !cardNumber || !expiryDate || !cvv) {
-        alert('Please complete all fields.');
-        return;
-    }
-
-    // If verification passes, show success message
-    alert('Thank you for your purchase!');
-    cart = [];
-    localStorage.removeItem('cart');
-    displayCart();
-    window.location.href = 'index.html'; // Redirect to the home page after purchase
-}
-
-// Update the cart counter in the navbar
-function updateCartUI() {
-    const cartCountElement = document.querySelector('.cart-count');
-    cartCountElement.textContent = cart.length;
-}
-
-// Initialize the page
-window.addEventListener('load', () => {
-    displayCart();
-    updateCartUI();
-
-    // Assign the verifyPayment function to the form
-    const paymentForm = document.getElementById('payment-form');
-    paymentForm.addEventListener('submit', verifyPayment);
-});
+    <script src="js/videojuegos.js"></script>
+    <script src="js/pago.js"></script>
+</body>
+</html>
